--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -16,6 +16,9 @@
                 <div class="product_info">
                 <span class="product_vendor">{{ product.vendor }}</span>
                 </div>
+                <div class="proudct_name">
+                <div>{{ product.name }}</div>
+                </div>
             
             {% endform %}
             </div>
