--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -17,7 +17,7 @@
                 <span class="product_vendor">{{ product.vendor }}</span>
                 </div>
                 <div class="proudct_name">
-                <div>{{ product.name }}</div>
+                <div>{{ product.title}}</div>
                 </div>
             
             {% endform %}
