--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -1,3 +1,5 @@
+{% assign selected_variant = product.selected_or_first_available_variant %}
+
 <div class="product_media">
     <div class="product_media_Section">
         <div class="product_mediaContainer">
@@ -21,7 +23,7 @@
                 </div>
 
                 <div class="Product_Price">
-               <span> {{ product.selected_or_first_available_variant |money }}</span>
+               <span> {{selected_variant.compare_at_price |money }}</span>
                 </div>
             
             {% endform %}
