--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="Product_Price">
-               <span> {{selected_variant.compare_at_price |money }}</span>
+               <span> {{product.price |money }}</span>
                 </div>
             
             {% endform %}
