--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -24,6 +24,7 @@
 
                 <div class="Product_Price">
                <span> {{selected_variant.compare_at_price |money }}</span>
+               <span>{{ selected_variant.price |money }}</span>
                 </div>
             
             {% endform %}
