--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -50,6 +50,13 @@
               </div>
             {% endunless %}
           </div>
+
+          <div class="quantity_vlu">
+        <label for="Quantitiy-{{ section.id }}">Quantity</label>
+        <div class='input_qnty_vlu'>
+            <input type="number" name='quantity' id="Quantitiy-{{ section.id }}" value="1">
+        </div>
+        </div>
         {% endform %}
       </div>
     </div>
